tests/fixtures/readmes/invalid/unknown_architecture.readme
Short:        Unknown architecture name
Uploader:     test@example.com (T. Test)
Type:         util/misc
Architecture: arm-amigaos

arm-amigaos is not in the known set.
